--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "clear": "0.0.1",
+    "cli-progress": "^1.3.0",
     "figlet": "^1.2.0",
     "inquirer": "^2.0.0",
     "jquery": "^3.1.1",
     "path": "^0.12.7",
     "shell": "^0.3.2",
     "unix-timestamp": "^0.2.0"
+  },
+  "bin": {
+    "ailot": "index.js"
   }
 }
