--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "ailot_converter",
-  "version": "0.0.1",
-  "description": "conversion tool for Ailot dictionary",
-  "main": "index.js",
-  "scripts": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/phonemica/ailot_converter.git"
-  },
-  "author": "柯禕藍",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/phonemica/ailot_converter/issues"
-  },
-  "homepage": "https://github.com/phonemica/ailot_converter#readme",
-  "dependencies": {
-    "chalk": "^1.1.3",
-    "clear": "0.0.1",
-    "cli-progress": "^1.3.0",
-    "figlet": "^1.2.0",
-    "inquirer": "^2.0.0",
-    "jquery": "^3.1.1",
-    "path": "^0.12.7",
-    "shell": "^0.3.2",
-    "unix-timestamp": "^0.2.0"
-  },
-  "bin": {
-    "ailot": "index.js"
-  }
+	"name": "ailot_converter",
+	"version": "0.0.1",
+	"description": "Toolbox conversion tool for Ailot dictionary",
+	"main": "index.js",
+	"scripts": {},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/phonemica/ailot_converter.git"
+	},
+	"author": "柯禕藍",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/phonemica/ailot_converter/issues"
+	},
+	"homepage": "https://github.com/phonemica/ailot_converter#readme",
+	"dependencies": {
+		"chalk": "^1.1.3",
+		"clear": "0.0.1",
+		"cli-progress": "^1.3.0",
+		"figlet": "^1.2.0",
+		"inquirer": "^2.0.0",
+		"jquery": "^3.1.1",
+		"path": "^0.12.7",
+		"shell": "^0.3.2",
+		"unix-timestamp": "^0.2.0"
+	},
+	"bin": {
+		"ailot": "index.js"
+	}
 }
